--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "operon searcher tool"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {file = "LICENSE"}
+dependencies = [
+    "dna_features_viewer==3.1.2",
+    "typer[all]==0.9.0",
+    "rich==13.4.2"
+]
 
 [project.scripts]  # Optional
 operon_searcher = "operon_searcher:main"
