--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "operon-searcher"
-version = "2.0.0"
+version = "3.0.0"
 description = "operon searcher tool"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -8,6 +8,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "dna_features_viewer==3.1.2",
     "typer[all]==0.9.0",
+    "click==8.1.7"
     "rich==13.4.2"
 ]
 
