--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "dna_features_viewer==3.1.2",
     "typer[all]==0.9.0",
-    "click==8.1.7"
+    "click==8.1.7",
     "rich==13.4.2"
 ]
 
